// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Instagram insights mapper (pinning) IG_MEDIA_METRICS spec table matches the canonical declaration (any change is intentional) 1`] = `
[
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
      "STORY",
    ],
    "feature": "core",
    "name": "reach",
  },
  {
    "appliesTo": [
      "STORY",
    ],
    "feature": "core",
    "name": "replies",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
    ],
    "feature": "core",
    "name": "saved",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
    ],
    "feature": "core",
    "name": "likes",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
    ],
    "feature": "core",
    "name": "comments",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
      "STORY",
    ],
    "feature": "core",
    "name": "shares",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
      "STORY",
    ],
    "feature": "core",
    "name": "total_interactions",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "REELS",
    ],
    "feature": "core",
    "name": "views",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "STORY",
    ],
    "feature": "core",
    "name": "follows",
  },
  {
    "appliesTo": [
      "IMAGE",
      "CAROUSEL_ALBUM",
      "VIDEO",
      "STORY",
    ],
    "feature": "core",
    "name": "profile_visits",
  },
  {
    "appliesTo": [
      "REELS",
    ],
    "feature": "core",
    "name": "ig_reels_avg_watch_time",
  },
  {
    "appliesTo": [
      "REELS",
    ],
    "feature": "core",
    "name": "ig_reels_video_view_total_time",
  },
  {
    "appliesTo": [
      "REELS",
    ],
    "feature": "core",
    "name": "reels_skip_rate",
  },
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia CAROUSEL_ALBUM 1`] = `
[
  "reach",
  "saved",
  "likes",
  "comments",
  "shares",
  "total_interactions",
  "views",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia IMAGE 1`] = `
[
  "reach",
  "saved",
  "likes",
  "comments",
  "shares",
  "total_interactions",
  "views",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia REELS 1`] = `
[
  "reach",
  "saved",
  "likes",
  "comments",
  "shares",
  "total_interactions",
  "views",
  "ig_reels_avg_watch_time",
  "ig_reels_video_view_total_time",
  "reels_skip_rate",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia STORY (media_product_type=STORY) 1`] = `
[
  "reach",
  "replies",
  "shares",
  "total_interactions",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia STORY (media_type=STORY only) 1`] = `
[
  "reach",
  "replies",
  "shares",
  "total_interactions",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia feed VIDEO 1`] = `
[
  "reach",
  "saved",
  "likes",
  "comments",
  "shares",
  "total_interactions",
  "views",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) insightMetricsForMedia unknown media_type falls through to FEED-like default 1`] = `
[
  "reach",
  "saved",
  "likes",
  "comments",
  "shares",
  "total_interactions",
  "views",
  "follows",
  "profile_visits",
]
`;

exports[`Instagram insights mapper (pinning) mapInsightsData canonical mappings (reach/saved/shares/views/impressions) 1`] = `
{
  "extra": {
    "impressions": 30000,
  },
  "reach": 12000,
  "saves": 45,
  "shares": 17,
  "views": 28000,
}
`;

exports[`Instagram insights mapper (pinning) mapInsightsData non-numeric values are skipped (no extra entry) 1`] = `
{
  "extra": {
    "follows": 4,
  },
}
`;

exports[`Instagram insights mapper (pinning) mapInsightsData unknown metrics flow into extra 1`] = `
{
  "extra": {
    "follows": 9,
    "profile_visits": 22,
    "total_interactions": 130,
  },
  "reach": 100,
}
`;
